sending email solved for forget password and email verification

--- a/views/resetPassword.handlebars
+++ b/views/resetPassword.handlebars
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Reset -  Kalo Vatvatey</title>
 </head>
-<body style="font-family: Arial, sans-serif; height: 100dvh; display: flex; line-height: 1.6; background-color: rgb(217, 223, 250); text-align: center;">
+<body style="font-family: Arial, sans-serif; padding: 3rem 0.5rem; display: flex; line-height: 1.6; background-color: rgb(217, 223, 250); text-align: center;">
     <div style="background-color: #fff; max-width: 508px; margin: auto; padding: 20px;">
         <h1 style="color: rgb(64, 80, 122);">Password Reset</h1>
         <p style="color: rgb(64, 80, 122); font-size: 16px;">Hey, we received a request to reset your password.</p>
         <p style="color: rgb(64, 80, 122); font-size: 16px;">Let’s get you a new one!</p>
         <div style="background-color: #fd7401; border-radius: 16px; padding: 10px 20px; display: inline-block;">
-            <a href="<%= resetPasswordUrl %>" style="text-decoration: none; color: #fff; font-weight: bold;">RESET MY PASSWORD</a>
+            <a href={{resetPasswordUrl}} style="text-decoration: none; color: #fff; font-weight: bold;">RESET MY PASSWORD</a>
         </div>
-        <p style="color: rgb(64, 80, 122); font-size: 14px; margin-top: 10px;">Having trouble? <a href="http://<%= chatUrl %>" target="_blank" style="text-decoration: none; color: rgb(80, 107, 236);">@tejkarki</a></p>
-        <p style="color: rgb(64, 80, 122); font-size: 14px;">Didn’t request a password reset? You can ignore this message.</p>
+        <p style="color: rgb(64, 80, 122); font-size: 14px; margin-top: 10px;">Having trouble? <a href={{chatUrl}} target="_blank" style="text-decoration: none; color: rgb(80, 107, 236);">@tejkarki</a></p>
+        <p style="color: rgb(64, 80, 122); font-size: 14px;">Didn’t request a password reset?  change your password as soon as possible.</p>
     </div>
 </body>
 </html>
